@@ -39,6 +39,7 @@ project
    ;
 
 test-suite libtorrent : 	
+	[ run test_peer_priority.cpp ]
 	[ run test_file.cpp ]
 	[ run test_threads.cpp ]
 	[ run test_rss.cpp ]
